Fix Chromium layout issues

--- a/src/app/alarm-menu/alarm-menu.component.scss
+++ b/src/app/alarm-menu/alarm-menu.component.scss
@@ -45,3 +45,9 @@
 ::ng-deep.mat-mdc-menu-panel {
   max-width:fit-content !important;
 }
+
+.menu-items-with-icons {
+  display: flex;
+  align-items: center;
+  width: max-content;
+}
